--- a/src/main/resources/Fxml/Client/ClientMenuView/Scheda.fxml
+++ b/src/main/resources/Fxml/Client/ClientMenuView/Scheda.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
@@ -29,10 +30,14 @@
     </center>
    <bottom>
         <HBox alignment="CENTER_RIGHT" BorderPane.alignment="CENTER">
-            <Button fx:id="eliminaSchedaButton" mnemonicParsing="false" styleClass="bottoneElimaScheda" text="Elimina scheda">
+            <Button fx:id="eliminaSchedaButton" mnemonicParsing="false" text="Elimina scheda">
             <HBox.margin>
                <Insets />
-            </HBox.margin></Button>
+            </HBox.margin>
+            <styleClass>
+               <String fx:value="bottoneElimaScheda" />
+               <String fx:value="btnCreaChiediElimina" />
+            </styleClass></Button>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
