--- a/src/main/resources/Fxml/Client/ClientMenuView/SchermataCreazioneScheda.fxml
+++ b/src/main/resources/Fxml/Client/ClientMenuView/SchermataCreazioneScheda.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
@@ -10,11 +11,15 @@
    <center>
       <VBox alignment="CENTER" fillWidth="false" spacing="10.0" BorderPane.alignment="CENTER">
          <children>
-           <Label id="labelNoScheda" alignment="CENTER" text="Nessuna scheda associata all'utente. Inizia a crearne una o richiedila all'admin." />
+           <Label id="labelNoScheda" alignment="CENTER" text="Nessuna scheda associata all'utente. Inizia a crearne una o richiedila all'admin.">
+               <styleClass>
+                  <String fx:value="label_testo_scuro" />
+                  <String fx:value="titoloContenitore" />
+               </styleClass></Label>
             <HBox id="contenitoreSceltaScheda" alignment="CENTER" fillHeight="false" spacing="20.0">
              <children>
-                 <Button id="bottoniCreaChiedi" fx:id="createScheda" mnemonicParsing="false" text="Crea la tua scheda" />
-                 <Button id="bottoniCreaChiedi" fx:id="askScheda" mnemonicParsing="false" text="Chiedi che te ne venga assegnata una" />
+                 <Button id="bottoniCreaChiedi" fx:id="createScheda" mnemonicParsing="false" styleClass="btnCreaChiediElimina" text="Crea la tua scheda" />
+                 <Button id="bottoniCreaChiedi" fx:id="askScheda" mnemonicParsing="false" styleClass="btnCreaChiediElimina" text="Chiedi che te ne venga assegnata una" />
              </children>
             </HBox>
          </children>
