--- a/src/main/resources/Fxml/Admin/DashboardAdmin.fxml
+++ b/src/main/resources/Fxml/Admin/DashboardAdmin.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.chart.BarChart?>
 <?import javafx.scene.chart.CategoryAxis?>
@@ -88,10 +89,14 @@
                            <content>
                               <VBox alignment="TOP_CENTER" prefWidth="250.0" spacing="15.0">
                                  <children>
-                                    <Label styleClass="label_testo_scuro" text="Promozioni attive:">
+                                    <Label text="Promozioni attive:">
                                        <font>
                                           <Font size="20.0" />
                                        </font>
+                                       <styleClass>
+                                          <String fx:value="label_testo_scuro" />
+                                          <String fx:value="stilePredefinito" />
+                                       </styleClass>
                                     </Label>
                                     <VBox fx:id="containerPromozioniAttive" alignment="TOP_CENTER" spacing="10.0" />
                                  </children>
