--- a/src/main/resources/Styles/dashboardAdmin.css
+++ b/src/main/resources/Styles/dashboardAdmin.css
@@ -1,3 +1,7 @@
+.stilePredefinito{
+    -fx-font-family: "Arial";
+    -fx-font-weight: bold;
+}
 .bottoneDashboardAdmin{
     -fx-font-size: 20;
     -fx-font-weight: bold;
@@ -10,7 +14,12 @@
     -fx-wrap-text: true;
 
 }
-
+.bottoni_offerte{
+    -fx-font-weight: bold;
+    -fx-font-family: "Arial";
+    -fx-border-radius: 20;
+    -fx-background-radius: 20;
+}
 
 #containerUsers {
     -fx-spacing: 15;
@@ -21,8 +30,6 @@
 
 .riga-dashboard{
     -fx-spacing: 50;
-
-
 }
 
 .bottoneAddUtente {
