--- a/src/main/resources/Fxml/Admin/AdminMenuView/InserimentoDatiNuovaOfferta.fxml
+++ b/src/main/resources/Fxml/Admin/AdminMenuView/InserimentoDatiNuovaOfferta.fxml
@@ -11,7 +11,7 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="background_chiaro" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Admin.InserimentoNuovaOffertaController">
    <top>
-      <Label styleClass="label_admin" text="Aggiungi una promozione" BorderPane.alignment="CENTER">
+      <Label styleClass="label_testo_scuro" text="Aggiungi una promozione" BorderPane.alignment="CENTER">
          <font>
             <Font name="Arial Bold" size="16.0" />
          </font>
@@ -23,7 +23,7 @@
    <left>
       <VBox alignment="TOP_CENTER" prefHeight="370.0" prefWidth="300.0" BorderPane.alignment="CENTER">
          <children>
-            <Label alignment="CENTER" contentDisplay="CENTER" styleClass="label_admin" text="Nome abbonamento:">
+            <Label alignment="CENTER" contentDisplay="CENTER" styleClass="label_testo_scuro" text="Nome abbonamento:">
                <VBox.margin>
                   <Insets top="10.0" />
                </VBox.margin>
@@ -36,7 +36,7 @@
                   <Insets left="30.0" right="30.0" top="10.0" />
                </VBox.margin>
             </TextField>
-            <Label styleClass="label_admin" text="Descrizione:">
+            <Label styleClass="label_testo_scuro" text="Descrizione:">
                <font>
                   <Font name="Arial Bold" size="12.0" />
                </font>
@@ -64,7 +64,7 @@
             <Insets top="10.0" />
          </BorderPane.margin>
          <children>
-            <Label styleClass="label_admin" text="Prezzo:">
+            <Label styleClass="label_testo_scuro" text="Prezzo:">
                <font>
                   <Font name="Arial Bold" size="12.0" />
                </font>
@@ -77,7 +77,7 @@
                   <Insets left="30.0" right="30.0" top="10.0" />
                </VBox.margin>
             </TextField>
-            <Label styleClass="label_admin" text="Durata(In mesi):">
+            <Label styleClass="label_testo_scuro" text="Durata(In mesi):">
                <font>
                   <Font name="Arial Bold" size="12.0" />
                </font>
@@ -96,8 +96,8 @@
    <bottom>
       <HBox alignment="BASELINE_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="20.0" BorderPane.alignment="CENTER_RIGHT">
          <children>
-            <Button fx:id="btnAnnulla" mnemonicParsing="false" prefHeight="25.0" prefWidth="57.0" styleClass="bottone_scheda" text="Annulla" />
-            <Button fx:id="btnConferma" mnemonicParsing="false" prefHeight="25.0" prefWidth="112.0" styleClass="bottone_scheda" text="Conferma">
+            <Button fx:id="btnAnnulla" mnemonicParsing="false" prefHeight="25.0" prefWidth="57.0" styleClass="btnCreaChiediElimina" text="Annulla" />
+            <Button fx:id="btnConferma" mnemonicParsing="false" prefHeight="25.0" prefWidth="112.0" styleClass="btnCreaChiediElimina" text="Conferma">
                <HBox.margin>
                   <Insets right="30.0" />
                </HBox.margin>
