--- a/src/main/resources/Fxml/Admin/DashboardAdmin.fxml
+++ b/src/main/resources/Fxml/Admin/DashboardAdmin.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.chart.BarChart?>
 <?import javafx.scene.chart.CategoryAxis?>
@@ -89,14 +88,10 @@
                            <content>
                               <VBox alignment="TOP_CENTER" prefWidth="250.0" spacing="15.0">
                                  <children>
-                                    <Label text="Promozioni attive:">
+                                    <Label styleClass="label_testo_scuro" text="Promozioni attive:">
                                        <font>
-                                          <Font size="20.0" />
+                                          <Font name="System Bold" size="20.0" />
                                        </font>
-                                       <styleClass>
-                                          <String fx:value="label_testo_scuro" />
-                                          <String fx:value="stilePredefinito" />
-                                       </styleClass>
                                     </Label>
                                     <VBox fx:id="containerPromozioniAttive" alignment="TOP_CENTER" spacing="10.0" />
                                  </children>
@@ -123,7 +118,7 @@
                         </VBox>
                         <VBox fx:id="containerTortaGenere" minWidth="200.0" HBox.hgrow="NEVER">
                            <children>
-                              <PieChart fx:id="tortaGenere" VBox.vgrow="ALWAYS" styleClass="chart-pie" />
+                              <PieChart fx:id="tortaGenere" styleClass="chart-pie" VBox.vgrow="ALWAYS" />
                            </children>
                         </VBox>
                      </children>
