--- a/src/main/resources/Fxml/Client/ClientMenu.fxml
+++ b/src/main/resources/Fxml/Client/ClientMenu.fxml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import com.jfoenix.controls.*?>
+<?import de.jensd.fx.glyphs.fontawesome.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 
-<VBox spacing="0" styleClass="sfondo_sfumato" stylesheets="@../../Styles/Dashboard.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Client.ClientMenuController">
+<VBox spacing="0" styleClass="sfondo_sfumato" stylesheets="@../../Styles/Dashboard.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Client.ClientMenuController">
 
    <!-- Sezione Profilo -->
    <VBox fx:id="profileSection" alignment="TOP_CENTER" maxHeight="300.0" maxWidth="250.0" spacing="5" stylesheets="@../../Styles/Dashboard.css">
@@ -79,22 +76,18 @@
                <Image url="@../../Images/LOGO_rettangolare.png" />
             </image>
          </ImageView>
-         <HBox fx:id="contentitoreLogoCambioTema" alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
+         <HBox fx:id="contentitoreLogoCambioTema" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
             <children>
-               <Button fx:id="logoutButton" maxWidth="Infinity" mnemonicParsing="false" styleClass="my_button_window" text="Logout">
+               <Button fx:id="logoutButton" mnemonicParsing="false" styleClass="logout_button">
                   <graphic>
-                     <FontAwesomeIconView glyphName="EXTERNAL_LINK" size="20" />
-                  </graphic>
-               </Button>
-               <Button fx:id="pulsanteCambioTema" maxWidth="Infinity" mnemonicParsing="false" styleClass="background_chiaro">
-                  <graphic>
-                     <ImageView fx:id="lunettaPulsanteTema" fitHeight="34.0" preserveRatio="true">
+                     <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
                         <image>
-                           <Image url="@../../Images/moon.png" />
+                           <Image url="@../../Images/logout.png" />
                         </image>
                      </ImageView>
                   </graphic>
                </Button>
+               <JFXToggleButton fx:id="pulsanteCambioTema" size="13.0" text="." textFill="TRANSPARENT" toggleColor="#27374d" toggleLineColor="#27374d" unToggleColor="#4f6f52" unToggleLineColor="#4f6f52" />
             </children>
          </HBox>
       </children>
