--- a/src/main/resources/Styles/dashboardAdmin.css
+++ b/src/main/resources/Styles/dashboardAdmin.css
@@ -26,6 +26,23 @@
     -fx-padding: 8;
 }
 
+#tendina_grafico{
+    -fx-font-size: 1.0em;
+    -fx-font-family: "Arial";
+    -fx-font-weight: bold;
+    -fx-background-radius: 10;
+    -fx-border-radius: 10;
+}
+
+#tendina_grafico .list-cell{
+    -fx-font-size: 1.0em;
+    -fx-font-family: "Arial";
+    -fx-font-weight: bold;
+    -fx-background-insets: 0;
+    -fx-border-width: 1;
+    -fx-border-radius: 10;
+    -fx-background-radius: 10;
+}
 
 
 .riga-dashboard{
