--- a/src/main/resources/Fxml/Admin/DashboardAdmin.fxml
+++ b/src/main/resources/Fxml/Admin/DashboardAdmin.fxml
@@ -39,7 +39,7 @@
                            <children>
                               <Label styleClass="label_testo_scuro" text="Richieste schede in attesa:">
                                  <font>
-                                    <Font size="20.0" />
+                                    <Font name="System Bold" size="20.0" />
                                  </font>
                               </Label>
                               <Label fx:id="labelRichiesteSchede" text="3">
